# datadragon_rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  LICENSE_APACHE.md  LICENSE_MIT.md  __bloat.bat  __build_release.bat  __udep.bat
codegen/: cdragon_generator.py  ddragon_generator.py  elder_dragon_quicktype.py
codegen/tmp/: Aatrox.json  Ahri.json  Akali.json  Alistar.json  Amumu.json  Anivia.json  Annie.json  Ashe.json  AurelionSol.json  Azir.json  Bard.json  Blitzcrank.json  Brand.json  Braum.json  Caitlyn.json  Camille.json  Cassiopeia.json  Chogath.json  Corki.json  Darius.json  Diana.json  DrMundo.json  Draven.json  Ekko.json  Elise.json  Evelynn.json  Ezreal.json  Fiddlesticks.json  Fiora.json  Fizz.json  Galio.json  Gangplank.json  Garen.json  Gnar.json  Gragas.json  Graves.json  Hecarim.json  Heimerdinger.json  Illaoi.json  Irelia.json  (+106 more)
src/: lib.rs
src/api/: mod.rs
src/api/cdragon/: mod.rs
src/api/cdragon/champion/: mod.rs
src/api/cdragon/honor/: mod.rs
src/api/cdragon/profile_icon/: mod.rs
src/api/cdragon/versions/: mod.rs
src/api/cdragon/ward/: mod.rs
src/api/ddragon/: mod.rs
src/api/ddragon/9/: mod.rs
src/api/ddragon/d9_23_1/: mod.rs
src/api/ddragon/d9_23_1/data/: mod.rs
src/api/ddragon/d9_23_1/data/cs_CZ/: mod.rs
src/api/ddragon/d9_23_1/img/: mod.rs
src/api/ddragon/img/: mod.rs
src/api/ddragon/img/bg/: mod.rs
src/api/ddragon/img/champion/: mod.rs
src/api/ddragon/img/global/: mod.rs
src/api/ddragon/img/perk_images/: mod.rs
src/api/ddragon/m/: mod.rs
src/api/ddragon_raw/img/: mod.rs
src/api/ddragon_raw/img/bg/: mod.rs
src/api/elderdragon/: mod.rs
src/api/elderdragon/serde/: champion_full_json.rs  champion_json.rs  item_json.rs  language_json.rs  map_json.rs  mission_assets_json.rs  mod.rs  profileicon_json.rs  runes_reforged_json.rs  sticker_json.rs  summoner_json.rs
src/tools/: http.rs  mod.rs
src/tools/version_cmp/: mod.rs
tests/: lib.rs
tests/cdragon/: mod.rs
tests/tools/: mod.rs
(+509 files in other folders)
