[package]
name = "datadragon_rs"
version = "0.4.0"
authors = ["Scarjit <scarjit@aol.com>"]
edition = "2018"
description = "Provides cached access to Riot Games datadragon and the communitydragon.org project"
readme = "README.md"
license = "MIT or Apache-2.0"
license-file = "LICENSE.md"
keywords = ["riot", "league of legends", "ddragon", "cdragon", "datadragon", "communitydragon"]
categories = ["api-bindings"]
repository = "https://github.com/Scarjit/datadragon_rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.21"
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.0.*"
table-extract = "0.2.2"
regex = "1.3.1"
semver = "0.9.0"
cached = "0.11.0"

[profile.dev]
codegen-units = 24
incremental = true

[profile.release]
lto = true
codegen-units = 4

[features]
default = ["cdragon", "ddragon", "elderdragon"]

cdragon = []
ddragon = []
elderdragon = []

elder_serde = ["elderdragon"]
elder_champ_gen = ["elder_serde"]